<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/btn_bg"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/please_input"/>
    <EditText
        android:padding="5dp"
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/input_name"/>
    <EditText
        android:padding="5dp"
        android:id="@+id/et_detail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="start"
        android:hint="@string/input_detail"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@color/btn_bg"
            android:padding="5dp"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#333333"/>
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:padding="5dp"
            android:background="@color/btn_bg"/>
    </LinearLayout>
</LinearLayout>
