<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/layout_title"
        android:layout_height="50dp"
        android:layout_width="match_parent"/>
    <RelativeLayout
        android:id="@+id/rl_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/iv_select_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btn_bg2"
            android:textColor="@color/btn_text"
            android:text="@string/take_photo"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/btn_text"/>
        <Button
            android:id="@+id/btn_select"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btn_bg2"
            android:textColor="@color/btn_text"
            android:text="@string/select_image"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/btn_text"/>
        <Button
            android:id="@+id/btn_add_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btn_bg2"
            android:textColor="@color/btn_text"
            android:text="@string/add_tag"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/btn_text"/>
        <Button
            android:id="@+id/btn_save_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/btn_bg2"
            android:textColor="@color/btn_text"
            android:text="@string/save_tag"/>
    </LinearLayout>
</LinearLayout>
